# realty-intelligence-platform

./: .env.example  .gitignore  README.md  deploy_resources.sh  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  infra.yml  test-azure-login.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: db.py  main.py
backend/src/api/v1/: __init__.py  listings.py  recommendations.py
backend/src/models/: __init__.py  import_batch.py  listing.py  recommendation.py
backend/src/schemas/: listings.py  recommendations.py
backend/src/services/: comparables.py  csv_import.py  explanation.py  geocoding.py  pricing.py
backend/tests/: conftest.py
backend/tests/contract/: test_listings_import.py  test_recommendations.py
backend/tests/integration/: test_csv_import_flow.py  test_recommendation_flow.py
backend/tests/unit/: test_comparables_service.py  test_csv_import_service.py  test_explanation_service.py  test_geocoding_service.py  test_pricing_service.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx
frontend/tests/: ApartmentForm.test.tsx  CsvUploader.test.tsx  (+2 more)
infra/: README.md  main.bicep
(+43 files in other folders)
