[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realty-intelligence-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "geopy>=2.4.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]
